--- a/app/src/main/res/values/strings_donottranslate.xml
+++ b/app/src/main/res/values/strings_donottranslate.xml
@@ -35,6 +35,9 @@
     <string name="default_dir" translatable="false">/sdcard</string>
 
     <string name="app_changelog" translatable="false">
+        \n Changelog : v1.0.7
+        \n • Bug fixes and improvements
+        \n
         \n Changelog : v1.0.6
         \n • New improved UI
         \n • Added new installer module
