Add zh-tw localization strings & add new resource strings

--- a/app/src/main/res/layout/item_preference.xml
+++ b/app/src/main/res/layout/item_preference.xml
@@ -28,7 +28,7 @@
     android:paddingEnd="?android:attr/scrollbarSize">
 
     <androidx.appcompat.widget.AppCompatImageView
-        android:id="@+android:id/icon"
+        android:id="@android:id/icon"
         android:layout_width="@dimen/icon_size_default"
         android:layout_height="@dimen/icon_size_default"
         android:layout_gravity="center"
@@ -46,7 +46,7 @@
         android:layout_weight="1">
 
         <TextView
-            android:id="@+android:id/title"
+            android:id="@android:id/title"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:ellipsize="marquee"
@@ -55,7 +55,7 @@
             android:textAppearance="@style/TextAppearance.Aurora.Line1" />
 
         <TextView
-            android:id="@+android:id/summary"
+            android:id="@android:id/summary"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_below="@android:id/title"
@@ -65,7 +65,7 @@
     </RelativeLayout>
     <!-- Preference should place its actual preference widget here. -->
     <LinearLayout
-        android:id="@+android:id/widget_frame"
+        android:id="@android:id/widget_frame"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:gravity="center_vertical"
